--- a/sub/plant.html
+++ b/sub/plant.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
-  <link rel="stylesheet" href="../css/ananti_sub.css">
+  <link rel="stylesheet" href="../css/plant.css">
 
   <!-- js -->
   <script defer src="js/jquery-3.7.1.min.js"></script>
@@ -38,7 +38,7 @@
     <header id="header">
         <div class="header_all">
           <div class="back">
-            <a href="../index_1.html#web-project">
+            <a href="../index_1.html#graphic-project">
               <div class="back_img">
               </div>
               <div class="back_txt">
@@ -61,8 +61,8 @@
       <div class="inner">
         <div class="container_txt">
           <div class="left">
-           <h4>Ananti</h4>
-                <p>웹사이트 <span>ㆍ</span> UX/UI <span>ㆍ</span>반응형웹</p>
+            <h4>식물을 기르기엔 난 너무 게을러</h4>
+                <p>랜딩페이지</p>
           </div>
           <div class="right">
             <ul class="txt_1">
@@ -72,30 +72,31 @@
               </li>
               <li>
                 <p class="sub_title">ㆍWorking Period</p>
-                <p class="sub_ex">2 week</p>
+                <p class="sub_ex">2days</p>
               </li>
               <li>
                 <p class="sub_title">ㆍTechnologies</p>
-                <p class="sub_ex">Illust</p>
                 <p class="sub_ex">Photoshop</p>
-                <p class="sub_ex">Pigma</p>
+                <p class="sub_ex">Illustrator</p>
               </li>
             </ul>
             
             <ul class="txt_2">
               <li>
                 <p class="sub_title">ㆍAbout</p>
-                <p class="sub_ex">기존 브랜드의 복잡한 정보 구조를 개선하고, <br>
-                                  고급스럽고 세련된 사용자 경험을 제공하기 위해 웹사이트를 리뉴얼하였습니다.</p>
+                <p class="sub_ex">기존 브랜드는 심플면서 간결한 느낌을 추구하는 반면에 <br>
+포인트 컬러와 라인을 이용하여 이미지를 강조하고 <br> 다양한 느낌으로 상세페이지를 제작하고자 하였습니다.
+</p>
               </li>
             </ul>
           </div>
         </div>
-        <div class="container_img">
-          <img src="../img/ananti_concept.jpg" alt="아난티 컨셉페이지">
+
+          <div class="container_img">
+          <img src="../img/plant_landing_1.png" alt="플랜트 랜딩페이지">
+          <img src="../img/plant_landing_2.png" alt="플랜트 랜딩페이지">
         </div>
       </div>
-
     </div>
 
     <footer id="footer">
