--- a/sub/web.html
+++ b/sub/web.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
-  <link rel="stylesheet" href="../css/ananti_sub.css">
+  <link rel="stylesheet" href="../css/web.css">
 
   <!-- js -->
   <script defer src="js/jquery-3.7.1.min.js"></script>
@@ -38,7 +38,7 @@
     <header id="header">
         <div class="header_all">
           <div class="back">
-            <a href="../index_1.html#web-project">
+            <a href="../index_1.html#graphic-project">
               <div class="back_img">
               </div>
               <div class="back_txt">
@@ -61,8 +61,8 @@
       <div class="inner">
         <div class="container_txt">
           <div class="left">
-           <h4>Ananti</h4>
-                <p>웹사이트 <span>ㆍ</span> UX/UI <span>ㆍ</span>반응형웹</p>
+                <h4>Web Banner</h4>
+                <p>메인 타이틀ㆍ네이버 베너ㆍ11번가 배너</p>
           </div>
           <div class="right">
             <ul class="txt_1">
@@ -76,29 +76,51 @@
               </li>
               <li>
                 <p class="sub_title">ㆍTechnologies</p>
-                <p class="sub_ex">Illust</p>
                 <p class="sub_ex">Photoshop</p>
-                <p class="sub_ex">Pigma</p>
+                <p class="sub_ex">Illustrator</p>
               </li>
             </ul>
             
             <ul class="txt_2">
               <li>
                 <p class="sub_title">ㆍAbout</p>
-                <p class="sub_ex">기존 브랜드의 복잡한 정보 구조를 개선하고, <br>
-                                  고급스럽고 세련된 사용자 경험을 제공하기 위해 웹사이트를 리뉴얼하였습니다.</p>
+                <p class="sub_ex">다양한 컨셉으로 메이 타이틀과 네이버 11번가 배너를 디자인하였습니다.</p>
               </li>
             </ul>
           </div>
         </div>
-        <div class="container_img">
-          <img src="../img/ananti_concept.jpg" alt="아난티 컨셉페이지">
-        </div>
-      </div>
 
+           <div class="concept">
+             <div class="banner_section">
+               <div class="container_img">
+                <h3>Main Title_1</h3>
+                  <img src="../img/main_title.png" alt="메인 타이틀1">
+               </div>
+             </div>
+
+              <div class="banner_section">
+    <div class="container_img">
+          <h3>Main Title_2</h3>
+      <img src="../img/main_title_2.gif" alt="메인 타이틀2">
     </div>
+  </div>
 
-    <footer id="footer">
+  <div class="banner_section">
+    <div class="container_img">
+          <h3>네이버 배너</h3>
+      <img src="../img/naver_img.png" alt="네이버 배너">
+    </div>
+  </div>
+
+  <div class="banner_section">
+    <div class="container_img">
+          <h3>11번가 배너</h3>
+      <img src="../img/11_img.png" alt="11번가 배너">
+    </div>
+  </div>
+           </div>
+
+ <footer id="footer">
       <div class="inner">
         <div class="footer_txt">
           <p class="footer_txt1">시간 내주셔서 감사합니다! 이메일 보다 문자로 주시면 빠르게 답변이 가능합니다</p>
