--- a/sub/eath.html
+++ b/sub/eath.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
-  <link rel="stylesheet" href="../css/ananti_sub.css">
+  <link rel="stylesheet" href="../css/eath.css">
 
   <!-- js -->
   <script defer src="js/jquery-3.7.1.min.js"></script>
@@ -38,7 +38,7 @@
     <header id="header">
         <div class="header_all">
           <div class="back">
-            <a href="../index_1.html#web-project">
+            <a href="../index_1.html#graphic-project">
               <div class="back_img">
               </div>
               <div class="back_txt">
@@ -61,8 +61,8 @@
       <div class="inner">
         <div class="container_txt">
           <div class="left">
-           <h4>Ananti</h4>
-                <p>웹사이트 <span>ㆍ</span> UX/UI <span>ㆍ</span>반응형웹</p>
+            <h4>Eath_library</h4>
+                <p>브랜드 디자인 <span>ㆍ</span> 로고 디자인 </p>
           </div>
           <div class="right">
             <ul class="txt_1">
@@ -72,33 +72,34 @@
               </li>
               <li>
                 <p class="sub_title">ㆍWorking Period</p>
-                <p class="sub_ex">2 week</p>
+                <p class="sub_ex">2days</p>
               </li>
               <li>
                 <p class="sub_title">ㆍTechnologies</p>
-                <p class="sub_ex">Illust</p>
                 <p class="sub_ex">Photoshop</p>
-                <p class="sub_ex">Pigma</p>
+                <p class="sub_ex">Illustrator</p>
               </li>
             </ul>
             
             <ul class="txt_2">
               <li>
                 <p class="sub_title">ㆍAbout</p>
-                <p class="sub_ex">기존 브랜드의 복잡한 정보 구조를 개선하고, <br>
-                                  고급스럽고 세련된 사용자 경험을 제공하기 위해 웹사이트를 리뉴얼하였습니다.</p>
+                <p class="sub_ex">'이스 라이브러리'는 전통 한의학을 기반으로하여 천연성분을 이용한 화장품 브랜드입니다. <br>
+브랜드가 추구하는 느낌을 살려 모던하면서 고급스러운 느낌을 살리고자 하였습니다.
+</p>
               </li>
             </ul>
           </div>
         </div>
-        <div class="container_img">
-          <img src="../img/ananti_concept.jpg" alt="아난티 컨셉페이지">
+
+          <div class="container_img">
+          <img src="../img/eath_concept1.png" alt="이스라이브러리 컨셉페이지">
+          <img src="../img/eath_concept2.png" alt="이스라이브러리 컨셉페이지">
         </div>
       </div>
-
     </div>
 
-    <footer id="footer">
+  <footer id="footer">
       <div class="inner">
         <div class="footer_txt">
           <p class="footer_txt1">시간 내주셔서 감사합니다! 이메일 보다 문자로 주시면 빠르게 답변이 가능합니다</p>
