--- a/sub/haltavoca_sub.html
+++ b/sub/haltavoca_sub.html
@@ -36,10 +36,9 @@
 <body>
   <div id="wrap">
     <header id="header">
-      <div class="inner">
         <div class="header_all">
           <div class="back">
-            <a href="../index_1.html">
+            <a href="../index_1.html#web-project">
               <div class="back_img">
               </div>
               <div class="back_txt">
@@ -48,10 +47,13 @@
             </a>
           </div>
 
+          <a href="#">
           <div class="top">
-            <a href="#" class="gotop">TOP</a>
+             <div class="gotop">
+               <div class="gotop_img"></div>
+             </div>
           </div>
-        </div>
+          </a>
       </div>
     </header>
 
@@ -59,13 +61,39 @@
       <div class="inner">
         <div class="container_txt">
           <div class="left">
-            <p>
-              Haltavoca <br>
-              반응형 웹사이트
-            </p>
+            <h4>Haltavoca</h4>
+                <p>웹사이트 <span>ㆍ</span> UX/UI <span>ㆍ</span>반응형웹</p>
           </div>
           <div class="right">
-
+            <ul class="txt_1">
+             <li>
+                <p class="sub_title">ㆍParticipation</p>
+                <p class="sub_ex">100%</p>
+              </li>
+              <li>
+                <p class="sub_title">ㆍWorking Period</p>
+                <p class="sub_ex">3 week</p>
+              </li>
+              <li>
+                <p class="sub_title">ㆍTechnologies</p>
+                <p class="sub_ex">Html&Css</p>
+                <p class="sub_ex">Jquery</p>
+                <p class="sub_ex">Pigma</p>
+              </li>
+            </ul>
+            
+            <ul class="txt_2">
+              <li>
+                <p class="sub_title">ㆍAbout</p>
+                <p class="sub_ex">SNS에서 유명한 브랜드를 선정해, 브랜드만의 특색있는 사이트를 제작하고자 <br>
+                                  통통 튀는 색감과 생동감을 강조하였고, 다양한 기능을 활용하여 <br>
+                                  할타보카만의 독창적인 감성이 담긴 개성있는 웹사이트를 완성하였습니다.</p>
+              </li>
+              <li>
+                <p class="sub_title"><img src="../img/link-svgrepo-com.svg" alt="링크 아이콘"> Website</p>
+                <p class="sub_ex_link"><a href="https://ningning999.github.io/haltavoca/">www.haltavoca.com</a></p>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="container_img">
@@ -78,12 +106,16 @@
     <footer id="footer">
       <div class="inner">
         <div class="footer_txt">
-          <p>시간 내주셔서 감사합니다! 이메일 보다 문자로 주시면 빠르게 답변이 가능합니다</p>
+          <p class="footer_txt1">시간 내주셔서 감사합니다! 이메일 보다 문자로 주시면 빠르게 답변이 가능합니다</p>
+          <p>본 사이트는 개인 포트폴리오 사이트로 <br class="mobile-br"> 제작되어 상업적 목적이 아닙니다. <br>
+             사용된 일부 이미지 및 폰트 등은 <br class="mobile-br"> 별도의 출처가 있음을 밝혀 드립니다.</p>
         </div>
         <div class="contact">
           <p class="contactus">Contact Us</p>
-          <p>010<span>ㆍ</span>9877<span>ㆍ</span>0975</p>
-          <p>dhe04066@naver.com</p>
+          <div class="num">
+             <p>010<span>ㆍ</span>9877<span>ㆍ</span>0975</p>
+             <p>dhe04066@naver.com</p>
+          </div>
         </div>
 
       </div>
