--- a/sub/marketb_sub.html
+++ b/sub/marketb_sub.html
@@ -36,19 +36,24 @@
 <body>
   <div id="wrap">
     <header id="header">
-      <div class="inner">
         <div class="header_all">
           <div class="back">
-            <a href="../index_1.html">
-              <img src="../img/free-icon-happy-face-4989500 (1).png" alt="뒤로가기">
-              <p>Back To Projects</p>
+            <a href="../index_1.html#web-project">
+              <div class="back_img">
+              </div>
+              <div class="back_txt">
+                <p>Back To Projects</p>
+              </div>
             </a>
           </div>
 
+          <a href="#">
           <div class="top">
-            <a href="#" class="gotop"><img src="../img/free-icon-happy-face-4989500 (1).png" alt="맨위로가기"></a>
+             <div class="gotop">
+               <div class="gotop_img"></div>
+             </div>
           </div>
-        </div>
+          </a>
       </div>
     </header>
 
@@ -56,13 +61,34 @@
       <div class="inner">
         <div class="container_txt">
           <div class="left">
-            <p>
-              Market B <br>
-              UIUX 디자인
-            </p>
+           <h4>Market B</h4>
+                <p>모바일 앱<span>ㆍ</span> UX/UI <span>ㆍ</span>반응형웹</p>
           </div>
           <div class="right">
-
+            <ul class="txt_1">
+             <li>
+                <p class="sub_title">ㆍParticipation</p>
+                <p class="sub_ex">100%</p>
+              </li>
+              <li>
+                <p class="sub_title">ㆍWorking Period</p>
+                <p class="sub_ex">3 week</p>
+              </li>
+              <li>
+                <p class="sub_title">ㆍTechnologies</p>
+                <p class="sub_ex">Illust</p>
+                <p class="sub_ex">Photoshop</p>
+                <p class="sub_ex">Pigma</p>
+              </li>
+            </ul>
+            
+            <ul class="txt_2">
+              <li>
+                <p class="sub_title">ㆍAbout</p>
+                <p class="sub_ex">실용적이고 감각적인 디자인을 기반으로 한 브랜드 이미지를 살리기 위해, <br>
+                                 사용자의 경험을 중점으로 두고 직관적이고 간결한 디자인을 구현하고자 하였습니다.</p>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="container_img">
@@ -75,12 +101,16 @@
     <footer id="footer">
       <div class="inner">
         <div class="footer_txt">
-          <p>시간 내주셔서 감사합니다! 이메일 보다 문자로 주시면 빠르게 답변이 가능합니다</p>
+          <p class="footer_txt1">시간 내주셔서 감사합니다! 이메일 보다 문자로 주시면 빠르게 답변이 가능합니다</p>
+          <p>본 사이트는 개인 포트폴리오 사이트로 <br class="mobile-br"> 제작되어 상업적 목적이 아닙니다. <br>
+             사용된 일부 이미지 및 폰트 등은 <br class="mobile-br"> 별도의 출처가 있음을 밝혀 드립니다.</p>
         </div>
         <div class="contact">
           <p class="contactus">Contact Us</p>
-          <p>010<span>ㆍ</span>9877<span>ㆍ</span>0975</p>
-          <p>dhe04066@naver.com</p>
+          <div class="num">
+             <p>010<span>ㆍ</span>9877<span>ㆍ</span>0975</p>
+             <p>dhe04066@naver.com</p>
+          </div>
         </div>
 
       </div>
