--- a/sub/merlot_1.html
+++ b/sub/merlot_1.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
-  <link rel="stylesheet" href="../css/ananti_sub.css">
+  <link rel="stylesheet" href="../css/merlot_1_sub.css">
 
   <!-- js -->
   <script defer src="js/jquery-3.7.1.min.js"></script>
@@ -38,7 +38,7 @@
     <header id="header">
         <div class="header_all">
           <div class="back">
-            <a href="../index_1.html#web-project">
+            <a href="../index_1.html#graphic-project">
               <div class="back_img">
               </div>
               <div class="back_txt">
@@ -61,8 +61,8 @@
       <div class="inner">
         <div class="container_txt">
           <div class="left">
-           <h4>Ananti</h4>
-                <p>웹사이트 <span>ㆍ</span> UX/UI <span>ㆍ</span>반응형웹</p>
+            <h4>Merlot_1</h4>
+                <p>스마트 스토어 <span>ㆍ</span>상세페이지</p>
           </div>
           <div class="right">
             <ul class="txt_1">
@@ -76,29 +76,41 @@
               </li>
               <li>
                 <p class="sub_title">ㆍTechnologies</p>
-                <p class="sub_ex">Illust</p>
                 <p class="sub_ex">Photoshop</p>
-                <p class="sub_ex">Pigma</p>
+                <p class="sub_ex">Illustrator</p>
               </li>
             </ul>
             
             <ul class="txt_2">
               <li>
                 <p class="sub_title">ㆍAbout</p>
-                <p class="sub_ex">기존 브랜드의 복잡한 정보 구조를 개선하고, <br>
-                                  고급스럽고 세련된 사용자 경험을 제공하기 위해 웹사이트를 리뉴얼하였습니다.</p>
+                <p class="sub_ex">멀롯은 스타일리시하고 편안한 강아지 옷을 제공하는 브랜드로,<br> 상세페이지에서는 반려견의 활동성을 고려한 기능성 제품을 강조하여 디자인하였습니다.</p>
+              </li>
+              <li>
+                <p class="sub_title"><img src="../img/link-svgrepo-com.svg" alt="링크 아이콘"> Website</p>
+                <p class="sub_ex_link"><a href="https://smartstore.naver.com/haxxfk/products/11106851969">https://smartstore.naver.com/merlot</a></p>
               </li>
             </ul>
           </div>
         </div>
-        <div class="container_img">
-          <img src="../img/ananti_concept.jpg" alt="아난티 컨셉페이지">
+
+        <div class="concept">
+          <h3>Banner Design</h3>
+          <div class="banner_img">
+          <img src="../img/merlot_banner_1.jpg" alt="멀롯 배너디자인1">
+          <img src="../img/merlot_banner_2.jpg" alt="멀롯 배너디자인2">
+        </div>
+
+          <h3>상세페이지</h3>
+          <p>사이트에 방문하시면 더 다양한 <br class="mobile-br"> 상세페이지를 확인하실 수 있습니다!</p>
+          <div class="container_img">
+          <img src="../img/merlot_1_concept.jpg" alt="멀롯 상세페이지">
+        </div>
         </div>
       </div>
-
     </div>
 
-    <footer id="footer">
+     <footer id="footer">
       <div class="inner">
         <div class="footer_txt">
           <p class="footer_txt1">시간 내주셔서 감사합니다! 이메일 보다 문자로 주시면 빠르게 답변이 가능합니다</p>
